--- a/Assignments/A02_CodingBasics.Rmd
+++ b/Assignments/A02_CodingBasics.Rmd
@@ -62,7 +62,7 @@ names(test_results) <- c("Student","Test Score","Passed Exam"); View(test_result
 
 9. QUESTION: How is this data frame different from a matrix?
 
-> Answer: 
+> Answer: In a data frame, the columns can contain different types of data (numeric, logical, and character statements), but in a matrix all the elements are the same type of data which are usually numbers. Data frames can also combine features of matrices and lists, and the items of the list serve as the columns of the data frame.
 
 10. Create a function with an if/else statement. Your function should determine whether a test score is a passing grade of 50 or above (TRUE or FALSE). You will need to choose either the `if` and `else` statements or the `ifelse` statement. Hint: Use `print`, not `return`. The name of your function should be informative.
 
