--- a/Lessons/04_DataExploration.Rmd
+++ b/Lessons/04_DataExploration.Rmd
@@ -46,7 +46,7 @@ At the top of your R scripts, you should load any packages that need to be used 
 
 At the same time, you should also load your theme if you are doing any data visualization with ggplot. More on this later.
 
-```{r, message = FALSE}
+```{r, message = FALSE} #dont print this on the document or print out the output
 # Load package
 library(tidyverse)
 ```
@@ -66,10 +66,10 @@ You may also import datasets from the Files tab, but this is not recommended sin
 # Relative file path (friendly for users regardless of machine)
 USGS.flow.data <- read.csv("./Data/Raw/USGS_Site02085000_Flow_Raw.csv")
 
-# What happens if we don't assign a name to our imported dataset?
-#read.csv("../Data/Raw/USGS_Site02085000_Flow_Raw.csv")
+# What happens if we don't assign a name to our imported dataset? just comes up in console 
+#read.csv("./Data/Raw/USGS_Site02085000_Flow_Raw.csv")
 
-# Another option is to choose with your browser
+# Another option is to choose with your browser- pulls up browser and you navigate from there but not reproducable, just comment which file you are loading in 
 # read.csv(file.choose())
 
 # To import .txt files, use read.table rather than read.csv
@@ -80,7 +80,7 @@ USGS.flow.data <- read.csv("./Data/Raw/USGS_Site02085000_Flow_Raw.csv")
 ## EXPLORE YOUR DATASET
 
 Take a moment to read through the README file associated with the USGS dataset on discharge at the Eno River. Where can you find this file? How does the placement and information found in this file relate to the best practices for reproducible data analysis?
-> ANSWER: 
+> ANSWER: You can find this folder within the Data folder to the metadata folder and click on the readme text. Placement helps let us know what is within each data set so that you can easily use data and aids in reproducability
 
 ```{r}
 View(USGS.flow.data)
@@ -89,7 +89,7 @@ View(USGS.flow.data)
 class(USGS.flow.data)
 colnames(USGS.flow.data)
 
-# Rename columns
+# Rename columns - for clairty, you can ask what the columns are and then rename them (must list all column names)
 colnames(USGS.flow.data) <- c("agency_cd", "site_no", "datetime", 
                               "discharge.max", "discharge.max.approval", 
                               "discharge.min", "discharge.min.approval", 
@@ -97,16 +97,16 @@ colnames(USGS.flow.data) <- c("agency_cd", "site_no", "datetime",
                               "gage.height.max", "gage.height.max.approval", 
                               "gage.height.min", "gage.height.min.approval", 
                               "gage.height.mean", "gage.height.mean.approval")
-str(USGS.flow.data)
-dim(USGS.flow.data)
-length(USGS.flow.data)
+str(USGS.flow.data) #asking for structure of dataframe with the size, variables, vectors, and beginning entries
+dim(USGS.flow.data) #dimensions from dataframe
+length(USGS.flow.data) #number of columns, nrow() for how tall it is
 
 head(USGS.flow.data)
 head(USGS.flow.data, 10)
 tail(USGS.flow.data, 5)
 USGS.flow.data[30000:30005, c(3, 8, 14)]
 
-class(USGS.flow.data$datetime)
+class(USGS.flow.data$datetime) #asking for specific columns
 class(USGS.flow.data$discharge.mean)
 class(USGS.flow.data$gage.height.mean)
 
@@ -115,7 +115,7 @@ summary(USGS.flow.data)
 ```
 
 What happened to blank cells in the spreadsheet when they were imported into R?
-> Answer: 
+> Answer: created N/A in black cells in csv files. the blanks are characters, and numeric comes as n/a
 
 ## Adjusting Datasets
 
@@ -129,7 +129,7 @@ summary(USGS.flow.data$gage.height.mean)
 ```
 Question: What types of research questions might make it favorable to remove NAs from a dataset, and what types of research questions might make it favorable to retain NAs in the dataset?
 
-> Answer: 
+> Answer: Analaysis on full sets of data and correlation matrix you need to remove the N/As but keeping N/As might show if we are missing. If you remove the N/As it gets rid of the row and might take out other data. 
 
 ```{r}
 USGS.flow.data.complete <- na.omit(USGS.flow.data)
@@ -168,11 +168,11 @@ help(as.Date)
 # (code must be uncommented)
 today <- Sys.Date()
 format(today, format = "%B")
-#format(today, format = "")
-#format(today, format = "")
-#format(today, format = "")
+#format(today, format = "%Y")
+#format(today, format = "%y")
+#format(today, format = "%A")
 
-USGS.flow.data$datetime <- as.Date(USGS.flow.data$datetime, format = "%m/%d/%y") 
+USGS.flow.data$datetime <- as.Date(USGS.flow.data$datetime, format = "%m/%d/%y") #format that the date is in code
 ```
 
 Note that for every date prior to 1969, R has assigned the date in the 2000s rather than the 1900s. This can be fixed with an `ifelse` statement inside a function. Run through the code below and write what is happening in the comment above each line.
