--- a/Assignments/A03_DataExploration.Rmd
+++ b/Assignments/A03_DataExploration.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 3: Data Exploration"
-author: "Student Name"
+author: "Masha Edmondson"
 output: pdf_document
 geometry: margin=2.54cm
 ---
@@ -23,6 +23,15 @@ The completed exercise is due on Tuesday, January 28 at 1:00 pm.
 
 1. Check your working directory, load necessary packages (tidyverse), and upload two datasets: the ECOTOX neonicotinoid dataset (ECOTOX_Neonicotinoids_Insects_raw.csv) and the Niwot Ridge NEON dataset for litter and woody debris (NEON_NIWO_Litter_massdata_2018-08_raw.csv). Name these datasets "Neonics" and "Litter", respectively. 
 ```{r,  message = FALSE}
+#Set up your working directory
+getwd()
+
+#Load packges
+library(tidyverse)
+
+#Import datasets
+Neonics.data <- read.csv("/Data/Raw/ECOTOX_Neonicotinoids_Insects_raw.csv")
+Litter.data <- read.csv("/Data/Raw/NEON_NIWO_Litter_massdata_2018-08_raw.csv")
 
 ```
 
