--- a/Assignments/A03_DataExploration.Rmd
+++ b/Assignments/A03_DataExploration.Rmd
@@ -1,7 +1,9 @@
 ---
-title: "Assignment 3: Data Exploration"
+title: 'Assignment 3: Data Exploration'
 author: "Masha Edmondson"
-output: pdf_document
+output:
+  pdf_document: default
+  word_document: default
 geometry: margin=2.54cm
 ---
 
